# serial_io

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: master.launch
src/: .pydevproject  serial_interface.py  smart_serial_interface.py
src/app/core/: util.py
src/app/core/model/: poseModel.py
src/app/node/serial_interface/: controller.py
src/app/node/smart_serial_interface/: SerialHandler.py  SerialSeeker.py
